# steamdb-dataview

./: .gitignore  README.md  app.py  data_features.py  gender_dev_analytics.py  legacy.py  navbar.py  pyproject.toml  requirements.txt  setup.py
assets/: style.css
pages/: char_dist.py  covariance_dist.py  dev_maps.py  gender_dist.py  gender_dist_time.py  gender_dists_old.py  heat_time.py  home.py
src/: data_features.py  dev_analytics.py  dicts.json  gender_analytics.py  gender_dev_analytics.py  setup.py
