[project]
name = "steamdb-dataview"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash (>=3.2.0,<4.0.0)",
    "dash-bootstrap-components (>=2.0.3,<3.0.0)",
    "dash-daq (>=0.6.0,<0.7.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
